--- a/src/data/tasks.json
+++ b/src/data/tasks.json
@@ -1,34 +1,12 @@
 [
   {
-    "id": "dummy-1",
-    "title": "Verify Status Update Script",
-    "status": "COMPLETED",
-    "priority": "LOW",
-    "timestamp": "2024-01-01T00:00:00.000Z",
-    "updatedAt": "2026-02-01T10:20:36.547Z",
-    "notes": "Verified"
-  },
-  {
-    "id": "1769941720000",
-    "title": "Create a new file called test_result.txt with the words 'Mission Accomplished'.",
-    "status": "OPEN",
-    "priority": "LOW",
-    "timestamp": "2026-02-01T10:28:40.165Z"
-  },
-  {
-    "id": "test-1769954605380",
-    "title": "Say hello and confirm you received this task from OpenClaw Manager",
+    "id": "1769965730456",
+    "title": "Check Indian Railway tatkal ticket from Lucknow to Gorakhpur for tomorrow - availability and fare",
     "status": "DONE",
     "priority": "LOW",
-    "timestamp": "2026-02-01T14:03:25.554Z",
-    "completedAt": "2026-02-01T14:03:30.343Z"
-  },
-  {
-    "id": "1769954757109",
-    "title": "show me the files on my desktop",
-    "status": "DONE",
-    "priority": "LOW",
-    "timestamp": "2026-02-01T14:05:57.134Z",
-    "completedAt": "2026-02-01T14:06:06.022Z"
+    "timestamp": "2026-02-01T17:08:51.351Z",
+    "source": "External",
+    "output": "Checked Indian Railway for Lucknow to Gorakhpur - Tomorrow (2 Feb). Multiple trains available including Gorakhdham Express, Vande Bharat, and Humsafar. Tatkal booking opens at 10 AM for AC, 11 AM for Sleeper.",
+    "completedAt": "2026-02-01T17:10:03.355Z"
   }
 ]
