feat: Add dashboard UI with real-time system stats, task management, and agent command input, backed by a new system monitoring API.

--- a/src/data/tasks.json
+++ b/src/data/tasks.json
@@ -1,1 +1,16 @@
-[]
+[
+  {
+    "id": "1770080105778",
+    "title": "check my outlook for any important email",
+    "status": "OPEN",
+    "priority": "LOW",
+    "timestamp": "2026-02-03T00:55:05.876Z"
+  },
+  {
+    "id": "1770080143289",
+    "title": "Check my Outlook Calendar for upcoming meetings",
+    "status": "OPEN",
+    "priority": "LOW",
+    "timestamp": "2026-02-03T00:55:43.305Z"
+  }
+]
