--- a/src/data/tasks.json
+++ b/src/data/tasks.json
@@ -1,16 +1,9 @@
 [
   {
-    "id": "1770080105778",
-    "title": "check my outlook for any important email",
-    "status": "OPEN",
+    "id": "1770083582405",
+    "title": "what files on my desktop?",
+    "status": "IN_PROGRESS",
     "priority": "LOW",
-    "timestamp": "2026-02-03T00:55:05.876Z"
-  },
-  {
-    "id": "1770080143289",
-    "title": "Check my Outlook Calendar for upcoming meetings",
-    "status": "OPEN",
-    "priority": "LOW",
-    "timestamp": "2026-02-03T00:55:43.305Z"
+    "timestamp": "2026-02-03T01:53:02.561Z"
   }
 ]
